[package]
name = "remotia-srt"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.14.0"
features = ["rt-multi-thread"]

[dependencies.remotia]
path = "../remotia"
default-features = false
features = ["buffers", "capture", "profilation"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.14"
srt-tokio = "0.4.1"
async-trait = "0.1.51"
futures = "0.3.18"
bytes = "1.1.0"
