[package]
name = "remotia-srt"
version = "0.1.0"
edition = "2021"

[dependencies.remotia]
path = "../remotia"
default-features = false
features = ["buffers", "capture", "profilation"]

[dependencies.tokio-stream]
features = ["sync"]
version = "0.1"

[dependencies]
env_logger = "0.10.0"
log = "0.4.14"
srt-tokio = "0.4.1"
async-trait = "0.1.68"
